# Alg3_MathAlg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
MathAlg/: FastPow.h  Fibonacci.h  Prime.h  gcd.h
Tests/: test.cpp
